display formatted json of selector

--- a/Ultimate4ByteDb/Client/_Imports.razor
+++ b/Ultimate4ByteDb/Client/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using Ultimate4ByteDb.Client
 @using Ultimate4ByteDb.Client.Shared
+@using System.Text.Json
+@using System.Text.Json.Serialization
