--- a/Ultimate4ByteDb/Client/Pages/SelectorLookupPage.razor
+++ b/Ultimate4ByteDb/Client/Pages/SelectorLookupPage.razor
@@ -9,21 +9,95 @@
 
 <PageTitle>Selector Lookup</PageTitle>
 
-<EditForm Model="@selectorLookup" OnValidSubmit="OnValidSubmitHandlerAsync">
-    <Blazored.FluentValidation.FluentValidationValidator />
-    <ValidationSummary />
+<div class="container">
+    <div class="row my-5">
+        <div class="col-6">
 
-    <label for="inputSelector">Selector:</label>
-    <InputText id="inputSelector" @bind-Value="@selectorLookup.Selector" />
+            <EditForm Model="@selectorLookup" OnValidSubmit="OnValidSubmitHandlerAsync">
+                <Blazored.FluentValidation.FluentValidationValidator />
+                <ValidationSummary />
 
-</EditForm>
+                <MudCard>
+                    <MudCardContent>
+                        <div class="row d-flex justify-content-evenly">
+                            <div class="col">
+                                <label for="inputSelector">Selector:</label>
+                                <MudTextField id="inputSelector" @bind-Value="@selectorLookup.Selector" />
+                            </div>
+                            <div class="col d-flex align-content-center justify-content-center">
+                                <MudButton ButtonType="ButtonType.Submit">Send</MudButton>
+                            </div>
+                        </div>
+                    </MudCardContent>
+                </MudCard>
 
-<pre id="json_content"></pre>
+            </EditForm>
+
+        </div>
+    </div>
+    @if(TreeItems.Count > 0)
+    {
+        <div class="row my-5">
+            <p>Output as TreeView for selector @($"0x{selectorLookup.Selector}") :</p>
+        </div>
+        <div class="row my-5">
+            <MudTreeView Items="@TreeItems" ExpandOnClick="true">
+                <ItemTemplate>
+                    <MudTreeViewItem @bind-Expanded="@context.IsExpanded" Items="@context.TreeItems">
+                        <Content>
+                            <MudTreeViewItemToggleButton @bind-Expanded="@context.IsExpanded" Visible="@context.HasChild" />
+                            <MudChip Icon="@context.Icon" IconColor="Color.Default" Color="Color.Primary" Label="true">@context.Text</MudChip>
+                            @if (context.Occurence is not null)
+                            {
+                                <MudChip Icon="@Icons.Filled.Numbers" IconColor="Color.Default" Color="Color.Secondary">@context.Occurence</MudChip>
+                            }
+                            @if (context.Likelyhood is not null)
+                            {
+                                <MudChip Icon="@Icons.Filled.Percent" IconColor="Color.Default" Color="Color.Tertiary">@($"{context.Likelyhood * 100:F2}")</MudChip>
+                            }
+                        </Content>
+                    </MudTreeViewItem>
+                </ItemTemplate>
+            </MudTreeView>
+        </div>
+        <div class="row my-5">
+            <p>Ouput as Json for selector @($"0x{selectorLookup.Selector}") :</p>
+        </div>
+    }
+
+    <div class="row my-5">
+        <pre id="json_content"></pre>
+    </div>
+</div>
 
 @code{
     private string test = null;
     private SelectorLookup selectorLookup = new();
     private IJSObjectReference? jsObjectRef;
+    private HashSet<TreeItemData> TreeItems { get; set; } = new HashSet<TreeItemData>();
+
+    public class TreeItemData
+    {
+        public string Text { get; set; }
+
+        public string Icon { get; set; }
+
+        public bool IsExpanded { get; set; }
+
+        public int? Occurence { get; set; }
+
+        public float? Likelyhood {get; set;}
+
+        public bool HasChild => TreeItems != null && TreeItems.Count > 0;
+
+        public HashSet<TreeItemData> TreeItems { get; set; } = new HashSet<TreeItemData>();
+
+        public TreeItemData(string text, string icon)
+        {
+            Text = text;
+            Icon = icon;
+        }
+    }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
@@ -49,5 +123,22 @@
         FourByteSelector fbs = await client.GetFromJsonAsync<FourByteSelector>($"/api/Selector/{selectorLookup.Selector}", options);
         //test = System.Text.Json.JsonSerializer.Serialize(fbs, options = options);
         await jsObjectRef.InvokeVoidAsync("showJson", fbs);
+
+        TreeItems.Clear();
+        foreach(var iterSig in fbs.SigColl.OrderByDescending(x => x.Likelyhood))
+        {
+            TreeItemData sigItem = new TreeItemData($"{iterSig.Name}", iterSig.SigType == FourByteSelector.Signature.SignatureType.Function ? Icons.Filled.Functions : Icons.Filled.Event) { Likelyhood = iterSig.Likelyhood, Occurence = iterSig.Occurance };
+            TreeItems.Add(sigItem);
+            foreach(var iterInputVarType in iterSig.InputVarTypeColl)
+            {
+                TreeItemData inputVarTypeItem = new TreeItemData(iterInputVarType.InputVarType, Icons.Filled.Folder);
+                sigItem.TreeItems.Add(inputVarTypeItem);
+                foreach(var iterVarName in iterInputVarType.VarNameColl.OrderByDescending(x => x.Likelyhood))
+                {
+                    TreeItemData varNameItem = new TreeItemData($"{iterVarName.VarName}", Icons.Filled.Folder) { Likelyhood = iterVarName.Likelyhood, Occurence = iterVarName.Occurance };
+                    inputVarTypeItem.TreeItems.Add(varNameItem);
+                }
+            }
+        }
     }
 }
